infra/k3s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: boringstack
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7330
      targetPort: 7330
      protocol: TCP
  selector:
    app: api
